--- a/home-css.css
+++ b/home-css.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
+
+body {
+    font-family: 'Avenir', sans-serif;
+}
+
 #rightPanel {
 	width: 60%;
 	display: inline-block;
