--- a/home-css.css
+++ b/home-css.css
@@ -3,24 +3,29 @@
 
 body {
     font-family: 'Avenir', sans-serif;
+    background: #f5f5f3;
+    color: #333;
+    margin: 0;
+    padding: 0;
 }
 
 #rightPanel {
-	width: 60%;
-	display: inline-block;
-	float: right;
+        width: 60%;
+        display: inline-block;
+        float: right;
+        padding: 40px;
 }
 #myImage {
-	margin-left: auto;
-	margin-right: auto;
-	/* [disabled]position: relative; */
-	left: auto;
-	right: auto;
-	width: 160px;
-	/* [disabled]top: 70px; */
-	margin-top: 70px;
-	margin-bottom: 20px;
-	border-radius: 100px;
+        margin-left: auto;
+        margin-right: auto;
+        /* [disabled]position: relative; */
+        left: auto;
+        right: auto;
+        width: 160px;
+        /* [disabled]top: 70px; */
+        margin-top: 40px;
+        margin-bottom: 20px;
+        border-radius: 100px;
 }
 img {
 	border-radius: 200px;
@@ -45,10 +50,11 @@ a:hover {
 }
 
 .heading {
-	font-weight: bold;
-	color: #2F2F2F;
-	text-align: left;
-	margin-bottom:10px;
+        font-weight: 600;
+        color: #2F2F2F;
+        text-align: left;
+        margin-top: 30px;
+        margin-bottom: 10px;
 }
 .sectionLinks a {
 	text-decoration: none;
@@ -60,8 +66,9 @@ a:hover {
 
 
 .detailText {
-	text-align: left;
-	margin-bottom:20px;
+        text-align: left;
+        margin-bottom:20px;
+        line-height: 1.5;
 
 }
 #spacerTopRight {
@@ -69,20 +76,20 @@ a:hover {
 }
 
 #container {
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        max-width: 900px;
 }
 
 .myInfoText {
-	margin-top: 10px;
-	height: auto;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 10px;
-	font-size:15
-	px;
+        margin-top: 10px;
+        height: auto;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 10px;
+        font-size: 15px;
 }
 .sectionLinks {
 	margin-top: 35px;
@@ -90,11 +97,13 @@ a:hover {
 
 
 #leftPanel {
-	width: 50%;
-	display: inline-block;
-	float: left;
-	position: fixed;
-	left: 0px;
+        width: 35%;
+        display: inline-block;
+        float: left;
+        position: fixed;
+        left: 0;
+        padding: 40px 20px;
+        background: white;
 }
 .heading a {
 	color: #006591;
