--- a/home-css.css
+++ b/home-css.css
@@ -139,6 +139,29 @@ body {
     color: #555;
 }
 
+.aboutTitle {
+    font-size: 18px;
+    font-weight: 600;
+    color: #2F2F2F;
+    margin-bottom: 15px;
+}
+
+.aboutItem {
+    font-size: 15px;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 4px;
+    padding-left: 20px;
+    position: relative;
+}
+
+.aboutItem::before {
+    content: '•';
+    position: absolute;
+    left: 0;
+    color: #999;
+}
+
 /* Links */
 a {
     text-decoration: none;
@@ -206,6 +229,16 @@ a:hover {
 
     .item {
         margin-bottom: 30px;
+    }
+
+    .aboutTitle {
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+
+    .aboutItem {
+        font-size: 14px;
+        margin-bottom: 6px;
     }
 
     #myImage {
